fix(Composer): updates service provider path

--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Atendwa\\Seedtrack\\SeedtrackServiceProvider"
+                "Atendwa\\Seedtrack\\Providers\\SeedtrackServiceProvider"
             ],
             "aliases": {
                 "SeedTrack": "Atendwa\\Seedtrack\\Facades\\Seedtrack"
