fix(composer): updates composer facade alias

--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
                 "Atendwa\\Seedtrack\\Providers\\SeedtrackServiceProvider"
             ],
             "aliases": {
-                "SeedTrack": "Atendwa\\Seedtrack\\Facades\\Seedtrack"
+                "Seedtrack": "Atendwa\\Seedtrack\\Facades\\Seedtrack"
             }
         }
     },
